# filewalker

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  setup_data.py
FileSystemTool/cleaner/: DuplicateCleaner.py
FileSystemTool/common/: path.py  string.py
FileSystemTool/common/logging/: __init__.py
FileSystemTool/config/: ConfigFile.py  ConfigInstall.py  DefaultConfig.py  logging.yml
FileSystemTool/interface/: rdfind.py
FileSystemTool/os/: linux.py
FileSystemTool/path/: file.py  walker.py
FileSystemTool/walker/: walker.py
doc/: duplicate-finders.md  mlocate.md  notes.md  stat.md
examples/: clean-duplicates.py  test-rdfind.py
filewalker/cleaner/: DuplicateCleaner.py  DuplicateFinder.py  DuplicateSet.py
filewalker/common/: logging.py  path.py  string.py
filewalker/common/logging/: __init__.py
filewalker/config/: ConfigFile.py  ConfigInstall.py  DefaultConfig.py  logging.yml
filewalker/interface/: rdfind.py
filewalker/mimetype/: __init__.py
filewalker/os/: linux.py
filewalker/path/: file.py  walker.py
filewalker/scripts/: rdfind_helper.py
filewalker/statistic/: Binning.py  Histogram.py  __init__.py
filewalker/unit_test/: file.py
unit-test/cleaner/: test_DuplicateSet.py
unit-test/path/: test_File.py
