# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = file-system-tool
version = attr: FileSystemTool.__version__
url = https://github.com/FabriceSalvaire/file-system-tool
# download_url =
project_urls =
    Documentation = https://fabricesalvaire.github.io/file-system-tool
    Code = https://github.com/FabriceSalvaire/file-system-tool
    Issue Tracker = https://github.com/FabriceSalvaire/file-system-tool/issues
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice SALVAIRE
author_email = fabrice.salvaire@orange.fr
maintainer = Fabrice SALVAIRE
maintainer_email = fabrice.salvaire@orange.fr
description = file-system-tool
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = xxx
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: xxx
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: xxx
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
scripts =
python_requires = >=3.8
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML >=3.10
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    tasks
    unit-test

[options.entry_points]
console_scripts =
    xxx = file-system-tool.Scripts.xxx:main

[options.package_data]
    file-system-tool.Config = logging.yml

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E302 	expected 2 blank lines, found 0
# E303 	too many blank lines (3)
# E402 	module level import not at top of file
ignore = E302, E303, E402

# pylintrc
# wrong-import-position,
# import-outside-toplevel,
# empty-docstring,
# missing-module-docstring,
# missing-class-docstring,
# missing-function-docstring
