# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = file-system-tool
version = attr: filewalker.__version__
url = https://github.com/FabriceSalvaire/file-system-tool
# download_url =
project_urls =
    Documentation = https://fabricesalvaire.github.io/file-system-tool
    Code = https://github.com/FabriceSalvaire/file-system-tool
    Issue Tracker = https://github.com/FabriceSalvaire/file-system-tool/issues
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice SALVAIRE
author_email = fabrice.salvaire@orange.fr
maintainer = Fabrice SALVAIRE
maintainer_email = fabrice.salvaire@orange.fr
description = file-system-tool
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = xxx
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: xxx
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: xxx
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
scripts =
python_requires = >=3.8
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML >=3.10
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    tasks
    unit-test

# [options.entry_points]
# console_scripts =
#     xxx = file-system-tool.Scripts.xxx:main

[options.package_data]
file-system-tool.config = logging.yml

[bdist_wheel]
universal = 1

# https://pycodestyle.pycqa.org/en/latest/intro.html#configuration
[pycodestyle]
max-line-length=100
ignore = E302

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107

[flake8]
max-line-length = 120
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E226 missing whitespace around arithmetic operator
# E302  expected 2 blank lines
# E303  too many blank lines
# E305 expected 2 blank lines after class or function definition
# E402  module level import not at top of file
# W503 line break before binary operator
ignore = E226, E302, E303, E305, E402, ANN101

[pylint.message]
# module-naming-style=PascalCase
max-line-length = 120
disable =
        missing-class-docstring,
        missing-function-docstring,
        missing-module-docstring,
        wrong-import-position,
        wrong-import-order